src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Portfolio_Turnover_Per_Year__c</fullName>
        <inlineHelpText>If you have greater than 0 acquisitions/dispositions, how much of your portfolio do you turn over each year?</inlineHelpText>
        <label>Portfolio Turnover Per Year.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>1-3%</fullName>
                </value>
                <value>
                    <fullName>4-7%</fullName>
                </value>
                <value>
                    <fullName>8-12%</fullName>
                </value>
                <value>
                    <fullName>13-20%</fullName>
                </value>
                <value>
                    <fullName>21%+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Press_Releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Interest_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Interest 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Use_in_Referrals__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interest_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Interest 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Use_in_Referrals__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads (Product Interest 2)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interest_Marketing__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. News</fullName>
                </value>
                <value>
                    <fullName>Pan-European React News</fullName>
                </value>
                <value>
                    <fullName>U.S. Sales Comps</fullName>
                </value>
                <value>
                    <fullName>European Sales Comps</fullName>
                </value>
                <value>
                    <fullName>U.S. Research</fullName>
                </value>
                <value>
                    <fullName>Pan-European Research</fullName>
                </value>
                <value>
                    <fullName>Detailed NAV and Earnings Models</fullName>
                </value>
                <value>
                    <fullName>U.S. Portfolio Tools (Includes AVM &amp; Portfolio Analytics)</fullName>
                </value>
                <value>
                    <fullName>Data Delivery (Includes Standardized Downloads, DataLink, &amp; API)</fullName>
                </value>
                <value>
                    <fullName>U.S. Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Pan-European Data Analytics</fullName>
                </value>
                <value>
                    <fullName>U.S. Rent Comps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Interests_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Function__c</fullName>
        <label>Professional Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Credit/Lending</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>C Suite</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Portfolio Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publicly_Traded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly Traded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <inlineHelpText>Populates when the lead status is moved to disqualified or qualified</inlineHelpText>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualifying_Team__c</fullName>
        <inlineHelpText>Team name of the lead owner when moved to converted state</inlineHelpText>
        <label>Qualified Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hewett Research</fullName>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>UK Sales</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>US Research</fullName>
                </value>
                <value>
                    <fullName>EU SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>US SDR Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>Head of SDR&apos;s</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion React</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
                <value>
                    <fullName>Ling</fullName>
                </value>
                <value>
                    <fullName>Judd</fullName>
                </value>
                <value>
                    <fullName>Greco</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Souter</fullName>
                </value>
                <value>
                    <fullName>Lemansky</fullName>
                    <isActive>false</isActive>
                    <label>Lemansky</label>
                </value>
                <value>
                    <fullName>Pliha</fullName>
                    <isActive>false</isActive>
                    <label>Pliha</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Comments__c</fullName>
        <inlineHelpText>This field maps to the Opportunity on conversion of the lead.</inlineHelpText>
        <label>Questions &amp; Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Disqualified__c</fullName>
        <label>Reason Disqualified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already being worked</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t Buy Research</fullName>
                    <label>Bad Fit/Doesn&apos;t Buy Research</label>
                </value>
                <value>
                    <fullName>Bad Timing</fullName>
                </value>
                <value>
                    <fullName>Company Type</fullName>
                </value>
                <value>
                    <fullName>Current Client</fullName>
                </value>
                <value>
                    <fullName>Currently Prospecting</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Not Responsive</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Needs Change</fullName>
                </value>
                <value>
                    <fullName>Engaged but Bad Timing</fullName>
                </value>
                <value>
                    <fullName>Engaged but Company Type Doesn’t Use Research/Data/News</fullName>
                </value>
                <value>
                    <fullName>Engaged but Still Learning/Not Ready for Sales</fullName>
                </value>
                <value>
                    <fullName>Engaged but Not the Right Contact (Seniority)</fullName>
                </value>
                <value>
                    <fullName>Engaged but Not the Right Contact (Department)</fullName>
                </value>
                <value>
                    <fullName>Engaged but No Budget</fullName>
                </value>
                <value>
                    <fullName>Engaged but Not Responsive</fullName>
                </value>
                <value>
                    <fullName>Engaged but on Prohibited List</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Student/Professor/Media/Vendor</fullName>
                    <label>Media/Vendor/Spam</label>
                </value>
                <value>
                    <fullName>Academic - Student</fullName>
                </value>
                <value>
                    <fullName>Academic - Professor</fullName>
                </value>
                <value>
                    <fullName>Unreachable</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>No Research Budget</fullName>
                </value>
                <value>
                    <fullName>Product Fit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Student/non-buying EDU/Media/non-viable contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Reason__c</fullName>
        <description>What is the compelling reason for this referral.</description>
        <inlineHelpText>Compelling reason for referral.</inlineHelpText>
        <label>Referral Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Referred_By_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred By field on lead object</description>
        <label>AM Referred By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Role_Lead__c</fullName>
        <formula>Referred_By_Lead__r.UserRole.Name</formula>
        <label>Referred by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <description>Renewal Month for Advisory Referral Lead</description>
        <label>Renewal Month</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Data_in_Role_Mktg_Identified__c</fullName>
        <inlineHelpText>Which of the following describe how you use real estate research/data in your role?  Check all that apply.</inlineHelpText>
        <label>Research/Data in Role Mktg Identified.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Investor Communications</fullName>
                </value>
                <value>
                    <fullName>Market Selection</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Identifying Assets</fullName>
                </value>
                <value>
                    <fullName>Asset Valuation</fullName>
                </value>
                <value>
                    <fullName>Stock Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revisit_Date__c</fullName>
        <label>Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Active_Lead__c</fullName>
        <description>If Lead has an activity logged within the last 30 days, this field will return a value of 1.</description>
        <formula>IF( TODAY () - LastActivityDate &lt;= 30, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Name__c</fullName>
        <description>Most recent SalesLoft Cadence of Lead record.</description>
        <label>Most Recent Cadence - Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Cadence_Next_Step_Due_Date__c</fullName>
        <description>Next SalesLoft step due date.</description>
        <label>Most Recent Cadence - Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Most_Recent_Last_Completed_Step__c</fullName>
        <description>Number of most recently completed SalesLoft Cadence step.</description>
        <label>Most Recent Cadence - Last Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Type_for_ReferralOpps__c</fullName>
        <label>Sales Type for ReferralOpps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Favor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_Interests_Lead__c</fullName>
        <label>Sector Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sectors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sectors_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which property sectors are of interest to you?  Check all that apply.</inlineHelpText>
        <label>Sectors of Interest Mktg Identified.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail (Mall, Strip Centers, Net Lease)</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>Manufactured Homes</fullName>
                </value>
                <value>
                    <fullName>Self-Storage</fullName>
                </value>
                <value>
                    <fullName>Student Housing</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Cold Storage</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Towers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourced_By__c</fullName>
        <label>Sourced By</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscribe_to_Competitors_Mktg_Identified__c</fullName>
        <label>Subscribe to Competitors Mktg Identifie.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Costar</fullName>
                </value>
                <value>
                    <fullName>Axiometrics</fullName>
                </value>
                <value>
                    <fullName>Moodys/REIS</fullName>
                </value>
                <value>
                    <fullName>Real Capital Analytics</fullName>
                </value>
                <value>
                    <fullName>PMA</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Region__c</fullName>
        <formula>TEXT( Owner:User.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_to_Assignment__c</fullName>
        <formula>(Assigned_Date__c - CreatedDate ) * 24 * 60</formula>
        <inlineHelpText>Calculates the (Assigned Date - Created Date) in Minutes</inlineHelpText>
        <label>Time to Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_Conversion__c</fullName>
        <formula>(Qualified_Date__c - CreatedDate ) * 24 * 60</formula>
        <inlineHelpText>Calculates the (Qualified Date - Created Date) in Minutes</inlineHelpText>
        <label>Time to Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timing_to_Subscribe_to_Next_RE_Provider__c</fullName>
        <inlineHelpText>When do you anticipate subscribing to your next research provider?</inlineHelpText>
        <label>Timing to Subscribe to Next RE Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-30 Days</fullName>
                </value>
                <value>
                    <fullName>31-90 Days</fullName>
                </value>
                <value>
                    <fullName>91-180 Days</fullName>
                </value>
                <value>
                    <fullName>181+ Days</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UK_Markets_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which markets within United Kingdom/Continental Europe are you interested in? (Check all that apply)</inlineHelpText>
        <label>UK Markets of Interest Mktg Identified.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 25 markets</fullName>
                </value>
                <value>
                    <fullName>Next 25 markets</fullName>
                </value>
                <value>
                    <fullName>Tertiary markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Markets_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which markets within the U.S and Canada are you interested in? (Check all that apply)</inlineHelpText>
        <label>US Markets of Interest Mktg Identified.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 50 markets</fullName>
                </value>
                <value>
                    <fullName>Next 50 markets</fullName>
                </value>
                <value>
                    <fullName>Tertiary markets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_S_CPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>U.S. CPPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>U_S_Webinars_and_Featured_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>U.S. Webinars and Featured Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_is_Current_RE_Research_Lacking__c</fullName>
        <inlineHelpText>Where do you feel your current real estate research is lacking? Check all that apply.</inlineHelpText>
        <label>Where is Current RE Research Lacking.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-market comparison</fullName>
                </value>
                <value>
                    <fullName>Cross-sector comparison</fullName>
                </value>
                <value>
                    <fullName>Macro intelligence</fullName>
                </value>
                <value>
                    <fullName>Property data</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Public/Private market interplay</fullName>
                </value>
                <value>
                    <fullName>Property/Valuation assessment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_City_Lead__c</fullName>
        <label>ZoomInfo Company City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Country_Code_Lead__c</fullName>
        <label>ZoomInfo Company Country Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Description_Lead__c</fullName>
        <label>ZoomInfo Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_ID_Lead__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_NAICS_Code_Lead__c</fullName>
        <label>ZoomInfo Company NAICS Code</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Name_Lead__c</fullName>
        <label>ZoomInfo Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Phone_Lead__c</fullName>
        <label>ZoomInfo Company Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Revenue_Lead__c</fullName>
        <label>ZoomInfo Company Revenue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Revenue_Range_Lead__c</fullName>
        <label>ZoomInfo Company Revenue Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_SIC_Code_Lead__c</fullName>
        <label>ZoomInfo Company SIC Code</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_State__c</fullName>
        <label>ZoomInfo Company State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Street_Lead__c</fullName>
        <label>ZoomInfo Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Ticker_Lead__c</fullName>
        <label>ZoomInfo Company Ticker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Company_Zip_Code_Lead__c</fullName>
        <label>ZoomInfo Company Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Direct_Phone_Lead__c</fullName>
        <label>ZoomInfo Direct Phone</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Education_Lead__c</fullName>
        <label>ZoomInfo Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Email_Address_Lead__c</fullName>
        <label>ZoomInfo Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Employee_Count_Lead__c</fullName>
        <label>ZoomInfo Employee Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Employment_History_Lead__c</fullName>
        <label>ZoomInfo Employment History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_First_Name_Lead__c</fullName>
        <label>ZoomInfo First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Job_Title_Lead__c</fullName>
        <label>ZoomInfo Job Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Job_Title__c</fullName>
        <label>ZoomInfo Job Title</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Last_Name_Lead__c</fullName>
        <label>ZoomInfo Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Last_Updated_Date_Lead__c</fullName>
        <label>ZoomInfo Last Updated Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Management_Level_Lead__c</fullName>
        <label>ZoomInfo Management Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_City_Lead__c</fullName>
        <label>ZoomInfo Person City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Country_Lead__c</fullName>
        <label>ZoomInfo Person Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_ID_Lead__c</fullName>
        <label>ZoomInfo Person ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_State_Lead__c</fullName>
        <label>ZoomInfo Person State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Street_Lead__c</fullName>
        <label>ZoomInfo Person Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Person_Zip_Code_Lead__c</fullName>
        <label>ZoomInfo Person Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Technology_Products_Lead__c</fullName>
        <label>ZoomInfo Technology Products</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Website_Lead__c</fullName>
        <label>ZoomInfo Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Within_EU_Lead__c</fullName>
        <label>ZoomInfo Within EU</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Notes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/affectlayer__AffectLayerNotes?objectId=&apos; &amp; Id &amp; &apos;&amp;objectType=Lead&apos; , &apos;Listen To Call&apos;, &apos;_self&apos;)</formula>
        <label>AffectLayer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>